--- a/AllinWeaponUnslotted.csproj
+++ b/AllinWeaponUnslotted.csproj
@@ -21,6 +21,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="config\defaultConfig.jsonc" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="SPTarkov.Common" Version="4.0.4" />
     <PackageReference Include="SPTarkov.DI" Version="4.0.4" />
     <PackageReference Include="SPTarkov.Server.Core" Version="4.0.4" />
